# chat-memory-system

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
backend/: main.py
backend/agents/: base_agent.py  contracts.py  reflection_agent.py
backend/api/: auth.py  conversations.py  health.py  memories.py
backend/auth/: dependencies.py  jwt.py  schemas.py
backend/capture/: evaluator.py  extractor.py
backend/config/: settings.py
backend/context/: composer.py
backend/core/: exceptions.py  llm_client.py  memory_engine.py  storage_backend.py  workflow_engine.py
backend/database/: models.py  postgres.py  repository.py
backend/evaluation/: golden_dataset.py  judge.py  metrics.py  regression_gate.py
backend/jobs/: decay_job.py  reflection_job.py
backend/memory/: service.py
backend/models/: api_schemas.py  conversation.py  enums.py  memory.py
backend/orchestrator/: engine.py  nodes.py  state.py
backend/prompts/: registry.py
backend/retrieve/: graph_retriever.py  hybrid_retriever.py  ranking.py
backend/store/: pgvector_store.py  redis_session_store.py  write_service.py
backend/tools/: embedding_service.py  llm_client.py  model_router.py  (+2 more)
docs/: FUTURE_WORK.md
fixtures/: golden_retrieval.json
frontend/: .env.production  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
(+26 files in other folders)
