[project]
name = "chat-memory-system"
version = "0.1.0"
description = "Production-grade ChatGPT-style memory system"
requires-python = ">=3.10"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Data validation and settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # Database — async Postgres with pgvector
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",

    # Redis — session memory and caching
    "redis[hiredis]>=5.0.0",

    # LLM providers
    "openai>=1.30.0",
    "anthropic>=0.25.0",

    # Orchestration
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",

    # HTTP client
    "httpx>=0.27.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.29.0",
    "python-multipart>=0.0.9",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
